public/css/main.css
/* ... */
#menuToggle input{
  display: block;
  width: 50px;
  height: 36px;
  position: absolute;
  top: -8px;
  left: -14px;
  cursor: pointer;
  opacity: 0;
  padding: 0px;
  z-index: 2;
  -webkit-touch-callout: none;
}
#menuToggle .patty {
  display: block;
  width: 20px;
  height: 2px;
  top: 2px;
  margin-bottom: 4px;
  position: relative;
  background: #052f4b;
  border-radius: 3px;
  z-index: 1;
  transform-origin: top right;
  transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
  background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
  width .3s,
  opacity 0.55s ease;
}
#menuToggle .patty.short {
  width: 14px;
}
#menuToggle .patty :first-child {
  transform-origin: top right;
}
#menuToggle .patty :nth-last-child(2) {
  transform-origin: bottom right;
}
#menuToggle input:checked ~ .patty  {
  opacity: 1;
  background: #232323;
  transform: rotate(-45deg) translate(0px, -2px)  scale(1.1, 1.1);
}
#menuToggle input:checked ~ .patty.short {
  width: 20px;
}
#menuToggle input:checked ~ span:nth-last-child(3) {
  transform: rotate(0deg) scale(0, 0);
}
#menuToggle input:checked ~ .patty:nth-last-child(2) {
  transform: rotate(45deg) translate(2px, 1px) scale(1.1, 1.1);
}
#menu {
  position: absolute;
  width: 273px;
  margin: -42px 0 0 -243px;
  padding: 20px 0px;
  padding-top: 42px;
  background: #fff;
  list-style-type: none;
  -webkit-font-smoothing: antialiased;
  transform-origin: 0% 0%;
  transform: translate(0, -100%);
  transition: transform 0.33s cubic-bezier(0.77,0.2,0.05,1.0);
  box-shadow: 0px 0px 0px 1px #0000001a;
}
#menu a {
  display: block;
  padding: 7px 20px;
  margin: 1px 0;
  font-size: 20px;
}
#menuToggle input:checked ~ #menu {
  transform: none;
}

@-webkit-keyframes autofill {
  to {
    background: transparent;
  }
}
.top-nav input:-webkit-autofill {
  -webkit-animation-name: autofill;
  -webkit-animation-fill-mode: both;
}
@-webkit-keyframes autofillDark {
  to {
    color: #7fbdff;
    background: transparent;
  }
}

.navbar-fixed-bottom {
  position: fixed;
  bottom: 0;
  width: 100%;
}
.navbar-fixed-bottom .nav-item {
  color: #3c4044;
  padding: 0 6px;
  position: relative;
}
#watermark {
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%) rotate(-15deg);
  position:fixed;
  opacity:0.016;
  z-index:-99;
  font-size: 480px;
  font-family: 'arial';
  color: gray;
}

/*pagination*/
#pagesize {
  flex: 0 60px;
}

/*table*/
.table-centered-1rem td {
  line-height: 1rem;
  vertical-align: middle;
}
.table th {
  font-size: 13px;
  font-weight: 500;
}
.table td {
  font-size: 14px;
  vertical-align: middle;
}
.table tr {
  border-bottom: 1px solid #e4e4e4;
}
.table thead th {
  border-bottom: none;
}
.table thead {
}
.table thead th {
  padding: 0.36rem .5rem;
}
.table thead tr {
  background: #fff !important;
  border-bottom: 1px solid #e2e2e2;
}
.table td, .table th {
  border: none;
  padding: .25rem .5rem;
}
.table-sm td {
  padding: .1rem .5rem;
  height: 25px;
}
.table.flush-left tr td:first-child {
  padding-left: 0px;
}
.table-mono-cells td {
  font-family: 'inconsolata-v15-latin-regular';
  font-size: 14px;
}
.table .address {
  max-width: 126px;
}
.table .outpoint {
  max-width: 222px;
}
.table-fixed {
  table-layout: fixed;
}

/*flexboxtable*/
.flex-table .header {
  padding: 0.36rem .5rem;
  background: #fff;
  border-bottom: 1px solid #e2e2e2;
  font-size: 13px;
  font-weight: 500;
}
.flex-table-row {
  padding: .4rem;
  font-size: 13px;
  border-bottom: 1px solid #e4e4e4;
}

.addressAndScriptData {
  overflow: hidden;
}
.scriptDataStar {
  z-index: 1;
  text-align: center;
  color: coral;
}
.scriptData {
  z-index: -1;
  display: none;
  border-top: 1px solid #ccc;
  font-family: 'source-sans-pro-v9-latin-regular';
}

/*content*/
.dcr-total .dcr {
  font-size: 28px;
}
.dcr-total .total-text {
  line-height: 11px;
  opacity: 0.8;
  font-weight: bold;
  letter-spacing: 0px;
}
.dcr-total .total-text .d-block {
  letter-spacing: 1px;
  font-weight: bold;
  font-size: 13px;
}
#address-qrcode img {
  width: 280px;
}
.attention {
  color: red;
  font-size: 14pt;
}
.invalidated-tx {
  background-color: rgba(151, 125, 163, 0.3);
  opacity: 0.5;
}
.grayed {
  opacity: 0.5;
}

/*Typography*/
.fs14-decimal .dot,
.fs14-decimal .decimal,
.fs14-decimal .unit {
  font-size: 14px
}
.fs16-decimal .dot,
.fs16-decimal .decimal,
.fs16-decimal .unit {
  font-size: 16px
}
.sep {
  position: relative;
  top: 3px;
  width: 1px;
  height: 14px;
  background: #848484;
  display: inline-block;
  margin: 0 3px 0 3px;
}
.hash {
  font-size: 14px;
  font-family: 'inconsolata-v15-latin-regular', monospace;
  display: inline-block;
  word-wrap: break-word;
  transition: .133s transform;
}
.truncate-hash {
  flex: 1 1 auto;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

/*resemble voting.decred.org*/
.highlight-text {
  height: 20px;
  margin-top: 3px;
  padding: 2px 4px 3px;
  border-radius: 3px;
  line-height: 20px;
  font-weight: 600;
  background-color: rgba(105, 211, 245, .3);
}
.agenda-voting-overview-option-dot {
  position: relative;
  top: 3px;
  width: 15px;
  height: 15px;
  margin-right: 6px;
  float: left;
  border-radius: 50%;
}
.agenda-voting-overview-option-dot._abstain {
  background-color: rgba(0, 0, 0, 0.5);
}
.agenda-voting-overview-option-dot._yes {
  background-color: #2ed6a1;
}
.agenda-voting-overview-option-dot._no {
  background-color: #2971ff;
}

/* keyboard navigation */
.keys-hint {
  color: gray;
  font-size: 12px;
  position: relative;
  top: -3px;
  left: 9px;
}
.keys-hint .arrows {
  display: inline-block;
  line-height: 6px;
  top: 4px;
  position: relative;
}
a {
  outline-color: transparent;
}
.keynav-target {
  animation-duration: .2s;
  animation-name: highlight;
  animation-fill-mode: forwards;
  animation-timing-function: ease-in-out;
  outline: 3px dotted transparent;
}
.keynav-target.activated {
  animation-duration: .8s;
  animation-fill-mode: none;
  animation-iteration-count:infinite;
}
/* ... */

